BS5: Fix playlist page nav overflow

--- a/frontend/css/new-navbar.less
+++ b/frontend/css/new-navbar.less
@@ -351,7 +351,7 @@ body {
   padding: 0 1em;
   margin-left: ceil((@grid-gutter-width / -2));
   margin-right: floor((@grid-gutter-width / -2));
-  > * {
+  &.dragscroll > * {
     flex-shrink: 0;
   }
 }
